// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Poster component should render children correctly 1`] = `
<div>
  <div
    class="Poster"
  >
    children
  </div>
</div>
`;

exports[`Poster component should render correctly 1`] = `
<div>
  <div
    class="Poster"
  />
</div>
`;

exports[`Poster component should render padding correctly 1`] = `
<div>
  <div
    class="Poster"
    style="padding: 1em;"
  >
    children
  </div>
</div>
`;
